--- a/tests/fixtures/file1.yml
+++ b/tests/fixtures/file1.yml
@@ -17,3 +17,12 @@ group2:
   abc: 12345
   deep:
     id: 45
+
+group4:
+  default: null
+  foo: 0
+  isNested: false
+  nest:
+    bar: ""
+    isNested: true
+  type: bas
