--- a/tests/fixtures/file2.yml
+++ b/tests/fixtures/file2.yml
@@ -18,7 +18,17 @@ group1:
   nest: str
 
 group3:
-  fee: 100500
   deep:
     id:
       number: 45
+  fee: 100500
+
+group4:
+  default: ""
+  foo: null
+  isNested: none
+  key: false
+  nest:
+    bar: 0
+  someKey: true
+  type: bar
